--- a/templates/basefile.html
+++ b/templates/basefile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fakesite</title>
+    <title>Petfinder</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
 </head>
@@ -15,7 +15,8 @@
             <ul style="list-style-type: none; padding: 0; text-align: center;">
                 <li style="display: inline; margin-right: 20px;"><a href="/" style="color: #fff; text-decoration: none; font-weight: bold;">Home</a></li>
                 <li style="display: inline; margin-right: 20px;"><a href="/aboutus" style="color: #fff; text-decoration: none; font-weight: bold;">About Us</a></li>
-                <li style="display: inline; margin-right: 20px;"><a href="#" style="color: #fff; text-decoration: none; font-weight: bold;">Find a Pet</a></li>
+                <li style="display: inline; margin-right: 20px;"><a href="/findpets" style="color: #fff; text-decoration: none; font-weight: bold;">Find a Pet</a></li>
+                <li style="display: inline; margin-right: 20px;"><a href="/services" style="color: #fff; text-decoration: none; font-weight: bold;">Services</a></li>
                 <li style="display: inline;"><a href="/contact" style="color: #fff; text-decoration: none; font-weight: bold;">Contact Us</a></li>
             </ul>
         </nav>
